--- a/UltimatePomodoro/UltimatePomodoro.csproj
+++ b/UltimatePomodoro/UltimatePomodoro.csproj
@@ -125,6 +125,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\FormValidators.cs" />
     <Compile Include="Models\TaskManager.cs" />
     <Compile Include="Models\TimeManger.cs" />
     <Compile Include="Models\User.cs" />
@@ -197,6 +198,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
+    </PackageReference>
+    <PackageReference Include="Template10-Validation">
+      <Version>1.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
